[tool.poetry]
name = "jwt"
version = "0.1.0"
description = "JWT service"
authors = ["Rubnikovich Sergey <https://github.com/Sergey-x>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = { extras = ["standard"], version = "^0.17.6" }
PyJWT = "^2.5.0"
orjson = "^3.8.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest-cov = "^4.0.0"
freezegun = "^1.2.2"
pytest-env = "^0.6.2"
pytest-asyncio = "^0.19.0"
requests = "^2.28.1"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = ["*/virtualenvs/*", "*/tests/*", "*/env.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
known_local_folder = "bookmarker"
lines_after_imports = 2
multi_line_output = 3
line_length = 100
include_trailing_comma = true
